--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Serverless backend for NIPs file management",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "dev": "nodemon --exec 'serverless offline start'",
     "deploy": "serverless deploy"
   },
   "license": "MIT",
@@ -12,5 +14,10 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "serverless-dotenv-plugin": "^6.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-offline": "^12.0.4"
   }
 }
