--- a/serverless.yml
+++ b/serverless.yml
@@ -7,18 +7,22 @@ provider:
   environment:
     USERS_TABLE: nips_users
     FILES_TABLE: nips_files
-  environment:
-    SECRET_KEY: ${env:SECRET_KEY}
+    SECRET_KEY: ${env.SECRET_KEY}
 
 plugins:
   - serverless-dotenv-plugin
+  - serverless-offline
 
 functions:
   authenticate:
-    handler: src/handlers.authentication.handler
+    handler: src/handlers/authentication.authenticateUser
+    events:
+      - http:
+          path: authenticate
+          method: post
   register:
     handler: src/handlers/authentication.registerUser
   uploadFile:
-    handler: src/handlers.file.uploadHandler
+    handler: src/handlers/file.uploadHandler
   fetchFile:
-    handler: src/handlers.file.fetchHandler
+    handler: src/handlers/file.fetchHandler
