--- a/package.json
+++ b/package.json
@@ -6,17 +6,27 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --exec 'serverless offline start'",
-    "deploy": "serverless deploy"
+    "deploy": "serverless deploy",
+    "lint": "eslint --fix \"src/**/*.{js,jsx}\"",
+    "format": "prettier --write \"src/**/*.{js,jsx}\""
   },
   "license": "MIT",
   "dependencies": {
+    "@middy/core": "^4.6.2",
+    "@middy/http-json-body-parser": "^4.6.2",
     "aws-sdk": "^2.1453.0",
     "bcryptjs": "^2.4.3",
+    "dynamoose": "^3.2.1",
     "jsonwebtoken": "^9.0.2",
     "serverless-dotenv-plugin": "^6.0.0"
   },
   "devDependencies": {
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "serverless-dotenv-plugin": "^6.0.0",
     "serverless-offline": "^12.0.4"
   }
