--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@middy/http-json-body-parser": "^4.6.2",
     "aws-sdk": "^2.1453.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "dynamoose": "^3.2.1",
     "jsonwebtoken": "^9.0.2",
     "serverless-dotenv-plugin": "^6.0.0"
