configured slightly yml

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,16 @@
-service: serverless-backend
+service: 
+  name: NiPS-backend
 
 provider:
   name: aws
   runtime: nodejs16.x
   stage: dev
+  region: us-east-1
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "s3:*"  # All S3 actions
+      Resource: "arn:aws:s3:::nips-backend/*"
   environment:
     SECRET_KEY: ${env.SECRET_KEY}
 
