--- a/serverless.yml
+++ b/serverless.yml
@@ -39,6 +39,38 @@ functions:
               - X-Amz-Security-Token
               - X-Amz-User-Agent
             allowCredentials: false
+  getOrganizationById:
+    handler: src/handlers/organization.getOrganizationHandler
+    events:
+      - http:
+          path: organization/{id}
+          method: get
+          cors:
+            origin: '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+            allowCredentials: false
+  getAllOrganizations:
+    handler: src/handlers/organization.getOrganizationsHandler
+    events:
+      - http:
+          path: organization
+          method: get
+          cors:
+            origin: '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+            allowCredentials: false
   # Users
   register:
     handler: src/handlers/authentication.registerHandler
@@ -334,3 +366,6 @@ functions:
               - X-Amz-Security-Token
               - X-Amz-User-Agent
             allowCredentials: false
+custom:
+  serverless-offline:
+    httpPort: 4000
