--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "serverless-dotenv-plugin": "^6.0.0"
   },
   "devDependencies": {
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest": "^27.2.3",
