fix: changed some mistakes when working witk objectIds

--- a/serverless.yml
+++ b/serverless.yml
@@ -429,3 +429,68 @@ functions:
               - X-Amz-Security-Token
               - X-Amz-User-Agent
             allowCredentials: false
+  # Services
+  getAllServices:
+    handler: src/handlers/service.getAllServicesHandler
+    events:
+      - http:
+          path: services
+          method: get
+          cors:
+            origin: '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+            allowCredentials: false
+  getServiceById:
+    handler: src/handlers/service.getServiceByIdHandler
+    events:
+      - http:
+          path: services/{organization}/{id}
+          method: get
+          cors:
+            origin: '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+            allowCredentials: false
+  createService:
+    handler: src/handlers/service.createServiceHandler
+    events:
+      - http:
+          path: services
+          method: post
+          cors:
+            origin: '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+            allowCredentials: false
+  updateService:
+    handler: src/handlers/service.updateServiceHandler
+    events:
+      - http:
+          path: services/{organization}/{id}
+          method: put
+          cors:
+            origin: '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+            allowCredentials: false
