--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@apollo/server": "^4.9.4",
+    "@as-integrations/aws-lambda": "^3.1.0",
+    "@graphql-tools/schema": "^10.0.0",
+    "@graphql-tools/utils": "^10.0.7",
     "@middy/core": "^4.6.2",
     "@middy/http-json-body-parser": "^4.6.2",
     "aws-sdk": "^2.1453.0",
     "bcryptjs": "^2.4.3",
+    "dataloader": "^2.2.2",
     "dotenv": "^16.3.1",
     "dynamoose": "^3.2.1",
+    "graphql": "^16.8.1",
+    "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^9.0.2",
     "serverless-dotenv-plugin": "^6.0.0"
   },
