--- a/serverless.yml
+++ b/serverless.yml
@@ -41,88 +41,7 @@ functions:
       - httpApi:
           path: /graphql
           method: GET
-  # Organizations
-  createOrganization:
-    handler: src/handlers/organization.createOrganizationHandler
-    events:
-      - http:
-          path: organization
-          method: post
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  createOrganizationAndUser:
-    handler: src/handlers/organization.createOrganizationAndUserHandler
-    events:
-      - http:
-          path: organizationAndUser
-          method: post
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  getOrganizationById:
-    handler: src/handlers/organization.getOrganizationHandler
-    events:
-      - http:
-          path: organization/{id}
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  getAllOrganizations:
-    handler: src/handlers/organization.getOrganizationsHandler
-    events:
-      - http:
-          path: organization
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  updateOrganization:
-    handler: src/handlers/organization.updateOrganizationHandler
-    events:
-      - http:
-          path: organization/{id}
-          method: put
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  # Users
+  # REST
   register:
     handler: src/handlers/authentication.registerHandler
     events:
@@ -155,346 +74,4 @@ functions:
               - X-Amz-Security-Token
               - X-Amz-User-Agent
             allowCredentials: false
-  getAllUsers:
-    handler: src/handlers/user.getAllUsersHandler
-    events:
-      - http:
-          path: users
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  getUserById:
-    handler: src/handlers/user.getUserByIdHandler
-    events:
-      - http:
-          path: users/{id}
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  getUserByToken:
-    handler: src/handlers/user.getUserByTokenHandler
-    events:
-      - http:
-          path: users/me
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  updateUser:
-    handler: src/handlers/user.updateUserHandler
-    events:
-      - http:
-          path: users/{id}
-          method: put
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  # Folders
-  getAllFolders:
-    handler: src/handlers/folder.getAllFoldersHandler
-    events:
-      - http:
-          path: folders
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  getFolderById:
-    handler: src/handlers/folder.getFolderByIdHandler
-    events:
-      - http:
-          path: folders/{organization}/{id}
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  createFolder:
-    handler: src/handlers/folder.createFolderHandler
-    events:
-      - http:
-          path: folders
-          method: post
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  updateFolder:
-    handler: src/handlers/folder.updateFolderHandler
-    events:
-      - http:
-          path: folders/{organization}/{id}
-          method: put
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  # Requirements
-  getAllRequirements:
-    handler: src/handlers/requirement.getAllRequirementsHandler
-    events:
-      - http:
-          path: requirements
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  getRequirementById:
-    handler: src/handlers/requirement.getRequirementByIdHandler
-    events:
-      - http:
-          path: requirements/{organization}/{id}
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  createRequirement:
-    handler: src/handlers/requirement.createRequirementHandler
-    events:
-      - http:
-          path: requirements
-          method: post
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  updateRequirement:
-    handler: src/handlers/requirement.updateRequirementHandler
-    events:
-      - http:
-          path: requirements/{organization}/{id}
-          method: put
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  # Files
-  getAllFiles:
-    handler: src/handlers/file.getAllFilesHandler
-    events:
-      - http:
-          path: files
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  getFileById:
-    handler: src/handlers/file.getFileByIdHandler
-    events:
-      - http:
-          path: files/{folder}/{id}
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  createFile:
-    handler: src/handlers/file.createFileHandler
-    events:
-      - http:
-          path: files
-          method: post
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  updateFile:
-    handler: src/handlers/file.updateFileHandler
-    events:
-      - http:
-          path: files/{folder}/{id}
-          method: put
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  s3UploadHandler:
-    handler: src/handlers/s3Upload.s3UploadHandler
-    events:
-      - s3:
-          bucket: nips-backend
-          event: s3:ObjectCreated:*
-      - http:
-          path: files/upload
-          method: post
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  # Services
-  getAllServices:
-    handler: src/handlers/service.getAllServicesHandler
-    events:
-      - http:
-          path: services
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  getServiceById:
-    handler: src/handlers/service.getServiceByIdHandler
-    events:
-      - http:
-          path: services/{organization}/{id}
-          method: get
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  createService:
-    handler: src/handlers/service.createServiceHandler
-    events:
-      - http:
-          path: services
-          method: post
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
-  updateService:
-    handler: src/handlers/service.updateServiceHandler
-    events:
-      - http:
-          path: services/{organization}/{id}
-          method: put
-          cors:
-            origin: "*"
-            headers:
-              - Content-Type
-              - X-Amz-Date
-              - Authorization
-              - X-Api-Key
-              - X-Amz-Security-Token
-              - X-Amz-User-Agent
-            allowCredentials: false
+  
