--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "nips-backend",
+  "name": "pdfs-translator-backend",
   "version": "1.0.0",
   "description": "Serverless backend for NIPs file management",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "generate:resolvers": "node ./src/scripts/generateResolvers.js",
+    "generate:models": "node ./src/scripts/generateModels.js",
+    "generate:start": "yarn generate:resolvers && yarn generate:models",
+    "format:start": "yarn format:resolvers && yarn format:models",
     "format:resolvers": "prettier --write \"./src/graph-ql/resolvers/index.js\"",
-    "dev": "nodemon --exec 'serverless offline start' --noTimeout",
-    "start": "yarn generate:resolvers && yarn format:resolvers && yarn dev",
+    "format:models": "prettier --write \"./src/models/index.js\"",
+    "application:run": "nodemon --exec 'serverless offline start' --noTimeout",
+    "dev": "yarn generate:start && yarn format:start && yarn application:run",
     "deploy": "serverless deploy",
     "lint": "eslint --fix \"src/**/*.{js,jsx}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx}\"",
-    "db:seed": "node ./src/scripts/init.js",
-    "db:connect": "node ./src/scripts/connect.js"
+    "db:seed": "yarn db:drop && node ./src/scripts/init.js",
+    "db:connect": "node ./src/scripts/connect.js",
+    "db:drop": "node ./src/scripts/drop.js",
+    "db:createSchema": "node ./src/models/index.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -24,16 +30,20 @@
     "@middy/core": "^4.6.2",
     "@middy/http-json-body-parser": "^4.6.2",
     "apollo-server-express": "^3.12.1",
-    "aws-sdk": "^2.1453.0",
+    "aws-sdk": "^2.1486.0",
+    "axios": "1.6.7",
     "bcryptjs": "^2.4.3",
+    "conekta": "^4.2.0",
     "dataloader": "^2.2.2",
     "dotenv": "^16.3.1",
-    "dynamoose": "^3.2.1",
     "graphql": "^16.8.1",
     "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.6.3",
-    "serverless-dotenv-plugin": "^6.0.0"
+    "mongoose-delete": "^1.0.1",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "use-upload": "^1.0.4"
   },
   "devDependencies": {
     "dotenv-cli": "^7.3.0",
