--- a/serverless.yml
+++ b/serverless.yml
@@ -4,7 +4,20 @@ provider:
   name: aws
   runtime: nodejs16.x
   httpApi:
-    cors: true
+    cors:
+      allowedOrigins:
+        - "http://localhost:3000" # Replace with the actual port you use for localhost
+      allowedMethods: ["OPTIONS", "POST", "GET"]
+      allowedHeaders: [
+          "Content-Type",
+          "X-Amz-Date",
+          "Authorization",
+          "X-Api-Key",
+          "X-Amz-Security-Token",
+          "X-Amz-User-Agent",
+          "public-namespace", # And any other headers you might use
+        ]
+      allowCredentials: true
   stage: dev
   region: us-east-1
   iamRoleStatements:
